--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        - PUBLIC_URL=/password-checker      
     container_name: password-checker-frontend
     ports:
       - "32778:3001"
