--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,23 +1,20 @@
 # Build stage
 FROM node:18-alpine AS builder
-
 WORKDIR /app
 
+ARG PUBLIC_URL=/
+
 COPY package.json package-lock.json* ./
-
 RUN npm install
-
 COPY public ./public
 COPY src ./src
-
-RUN npm run build
+RUN npm run build -- --public-url=$PUBLIC_URL
 
 # Production stage
 FROM nginx:alpine
-
 COPY --from=builder /app/build /usr/share/nginx/html
 
-# Configure nginx
+# Configure nginx to serve React app at /password-checker
 RUN echo 'server { \
   listen 3001; \
   location / { \
@@ -30,5 +27,4 @@ RUN echo 'server { \
 }' > /etc/nginx/conf.d/default.conf
 
 EXPOSE 3001
-
 CMD ["nginx", "-g", "daemon off;"]
