--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     depends_on:
       - backend
     environment:
-      - REACT_APP_API_URL=http://backend:5001
+      - REACT_APP_API_URL=/password-checker/api
     networks:
       - password-network
 
